tests/spec/compile-fail/106_generic_interface_inference_ambiguous.zn
// category: compile-fail
// profile: freestanding
// purpose: generic interface inference fails when one concrete type implements multiple matching instances

module tests.fail.genericInterfaceInferenceAmbiguous;

struct Event {
    id: U64,
}

struct Message {
    id: U64,
}

interface Consumer<T> {
    fn count(self) -> U64;
}

struct MultiConsumer {
    total: U64,
}

impl Consumer<Event> for MultiConsumer {
    fn count(self) -> U64 {
        return self.total;
    }
}

impl Consumer<Message> for MultiConsumer {
    fn count(self) -> U64 {
        return self.total;
    }
}

fn inspect<T>(consumer: Consumer<T>) -> U64 {
    return consumer.count();
}

fn bad() -> U64 {
    return inspect(MultiConsumer { total: 5 }); // expected-error: cannot infer T; MultiConsumer implements multiple Consumer<T> instances
}
